--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -51,7 +51,7 @@ set_target_properties(__idf_stm32 PROPERTIES LINK_INTERFACE_MULTIPLICITY 3)
 
 set(comps app_main app_settings  utils_misc utils_debug txtio uout cli jsmn 
  net_http_server net_mqtt_app app_uout app_misc app_net net app_cli protobuf nanopb stm32 config_kvs 
- key_value_store net_mqtt stm32_com http_server_content firmware_update storage utils_time)
+ kvs net_mqtt stm32_com http_server_content firmware_update storage utils_time)
 
 foreach(comp ${comps})
   message("comp: ${comp}")
