--- a/esp32/netmcu/components/rv_netmcu/CMakeLists.txt
+++ b/esp32/netmcu/components/rv_netmcu/CMakeLists.txt
@@ -51,7 +51,7 @@ idf_component_register(
                    app_mqtt/include stm32_com/include app_http_server/include app_settings/include 
     REQUIRES app_config cli firmware_update uout utils_debug utils_misc utils_time weather jsmn webapp kvs
     PRIV_REQUIRES app_update cli config_kvs driver esp_event esp_netif kvs lwip net_http_server
-                  main_loop mbedtls net  net_mqtt nvs_flash protobuf stm32 storage txtio uout utils_debug
+                  main_loop mbedtls net  net_mqtt_client nvs_flash protobuf stm32 storage txtio uout utils_debug
                   utils_misc utils_time 
     EMBED_TXTFILES app_misc/ca_cert.pem
 )
