Get rid of file doubles

--- a/stm32/rv/Libraries/mcp23017/CMakeLists.txt
+++ b/stm32/rv/Libraries/mcp23017/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.16)
 
 add_library(mcp23017 STATIC src/mcp23017.c)
 target_include_directories(mcp23017 PUBLIC include)
+target_link_libraries(mcp23017 utils_misc)
