--- a/stm32/rv/CMakeLists.txt
+++ b/stm32/rv/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 project(irrigation_control)
 
+set(NO_IDF 1)
+
 option(BUILD_ONLY_TESTS "build host test" OFF)
 set(TARGET_ARCH "STM32F1" CACHE STRING "Set the intended target. One of: HOST, STM32F1")
 
