--- a/stm32/rv/Libraries/tm1638/CMakeLists.txt
+++ b/stm32/rv/Libraries/tm1638/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 
 add_library(tm1638 STATIC src/tm1638.c src/dlb8.c)
 target_include_directories(tm1638 PUBLIC include)
+target_link_libraries(tm1638 utils_misc)
+
