Make rv stm32 compile with components-mcu

--- a/esp32/netmcu/components/app_config/CMakeLists.txt
+++ b/esp32/netmcu/components/app_config/CMakeLists.txt
@@ -1,4 +1,12 @@
+if(COMMAND idf_component_register)
 idf_component_register(
     INCLUDE_DIRS . "./include"
     REQUIRES utils_misc
 )
+
+else()
+add_library(app_config)
+target_include_directories(app_config PUBLIC ./include)
+target_link_libraries(app_config PUBLIC utils_misc)
+
+endif()
