--- a/stm32/rv/.cproject
+++ b/stm32/rv/.cproject
@@ -38,6 +38,10 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths.1474896496" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../src"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1174237645" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -58,13 +62,17 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/main&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction.2059624119" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata.1609189470" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard.1862871738" name="Language standard" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard" useByScannerDiscovery="true" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.languagestandard.value.gnu18" valueType="enumerated"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1026856407" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
-							<tool command="g++ -std=gnu++2a -Wno-psabi" commandLinePattern="${COMMAND} ${INPUTS} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT}" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.556692887" name="MCU G++ Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler">
+							<tool command="g++" commandLinePattern="${COMMAND} ${INPUTS} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT}" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.556692887" name="MCU G++ Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler">
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.debuglevel.1513555516" name="Debug level" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.debuglevel" useByScannerDiscovery="false" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.debuglevel.value.g3" valueType="enumerated"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.optimization.level.1890342715" name="Optimization level" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.optimization.level.value.og" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols.882227891" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols" useByScannerDiscovery="false" valueType="definedSymbols">
@@ -80,6 +88,10 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/test/host/unity/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction.859561005" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata.1947261943" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -91,6 +103,7 @@
 									<listOptionValue builtIn="false" value="-Wno-missing-field-initializers"/>
 									<listOptionValue builtIn="false" value="-include rv_config.h"/>
 								</option>
+								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.nousecxaatexit.1455861057" name="Do not use __cxa_atexit for registering static destructors (-fno-cxa-atexit)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.nousecxaatexit" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.159375770" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.linker.378986402" name="MCU GCC Linker" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.linker">
@@ -107,6 +120,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/external/libopencm3/lib}&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.nostartfiles.1671794811" name="Do not use standard start files (-nostartfiles)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.nostartfiles" value="true" valueType="boolean"/>
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.otherflags.259289026" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.option.otherflags" valueType="stringList"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.input.544676415" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -124,7 +138,10 @@
 					</folderInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries"/>
+						<entry excluding="esp32/|host/|test/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="components-mcu/cli"/>
 						<entry excluding="test/**|jsmn/**" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="components-mcu/jsmn"/>
+						<entry excluding="esp32/|host/|test/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="components-mcu/txtio"/>
+						<entry excluding="test/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="components-mcu/uout"/>
 						<entry excluding="esp32/|test/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="components-mcu/utils_misc"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
@@ -169,6 +186,10 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths.1666702962" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.180454851" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -190,6 +211,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/rv/test/host/unity/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;/${ProjName}/component-mcu/jsmn/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction.1890729999" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata.1585753314" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -212,6 +237,10 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/main&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/test/host/unity/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction.344531016" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata.401510624" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -297,6 +326,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/rv/test/host/unity/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;/${ProjName}/component-mcu/jsmn/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1726898712" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -319,6 +352,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/rv/test/host/unity/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;/${ProjName}/component-mcu/jsmn/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction.1039449962" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata.415926985" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -342,6 +379,10 @@
 									<listOptionValue builtIn="false" value="../external/catch2/single_include"/>
 									<listOptionValue builtIn="false" value="&quot;/${ProjName}/component-mcu/jsmn/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_misc/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/uout/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/cli/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/utils_debug/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/components-mcu/txtio/include&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction.544186159" name="Place functions in their own sections (-ffunction-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.ffunction" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata.452262215" name="Place data in their own sections (-fdata-sections)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fdata" useByScannerDiscovery="false" value="true" valueType="boolean"/>
