--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -13,6 +13,7 @@
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-replace": "^5.0.5",
 		"@rollup/plugin-strip": "^3.0.4",
 		"eslint-plugin-svelte": "^2.35.1",
 		"js-base64": "^3.7.7",
@@ -29,6 +30,7 @@
 		"svelte": "^4.2.12",
 		"svelte-i18n": "^4.0.0",
 		"svelte-preprocess": "^5.1.3",
+		"sveltejs-tippy": "^3.0.0",
 		"tailwindcss": "^3.4.1"
 	},
 	"jshintConfig": {
