Improve code. Talk from wapp to rvmcu only indirectly via netmcu

--- a/esp32/netmcu/components/rv_netmcu/CMakeLists.txt
+++ b/esp32/netmcu/components/rv_netmcu/CMakeLists.txt
@@ -22,7 +22,7 @@ set(srcs
     app_settings/config.cc app_settings/config_kvs.cc app_settings/config_comps.cc app_settings/app_settings.cc 
     app_http_server/esp32/uri_handlers.cc app_http_server/web_content.cc
     
-    stm32_com/esp32/com_task.cc
+    stm32_com/esp32/com_task.cc stm32_com/stm32_commands.cc
     
     
 )
