--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "esp32/netmcu/external/components-misc"]
 	path = esp32/netmcu/external/components-misc
 	url = https://github.com/zwiebert/components-misc.git
+[submodule "esp32/netmcu/external/jsmnit"]
+	path = esp32/netmcu/external/jsmnit
+	url = https://github.com/zwiebert/jsmnit.git
+[submodule "esp32/netmcu/external/host-test-idf"]
+	path = esp32/netmcu/external/host-test-idf
+	url = https://github.com/zwiebert/host-test-idf.git
