--- a/esp32/netmcu/flavors/host_test/CMakeLists.txt
+++ b/esp32/netmcu/flavors/host_test/CMakeLists.txt
@@ -13,7 +13,7 @@ set(proj_src_dir "${CMAKE_SOURCE_DIR}/../..")
 add_compile_definitions(USE_JSON) 
 
 
-file(GLOB external_components ${CMAKE_SOURCE_DIR}/../../external/*/components)
+file(GLOB external_components ${CMAKE_SOURCE_DIR}/../../external/*/components ${CMAKE_SOURCE_DIR}/../../external/*/external/*/components)
 set(COMPONENT_DIRECTORIES components)
 list(TRANSFORM COMPONENT_DIRECTORIES PREPEND   ${CMAKE_SOURCE_DIR}/../../)
 list(APPEND COMPONENT_DIRECTORIES ${external_components})
