Move around components

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = esp32/netmcu/external/components-misc
 	url = https://github.com/zwiebert/components-misc.git
 [submodule "esp32/netmcu/external/jsmnit"]
-	path = esp32/netmcu/external/jsmnit
+	path = esp32/netmcu/external/jsoneat
 	url = https://github.com/zwiebert/jsmnit.git
 [submodule "esp32/netmcu/external/host-test-idf"]
 	path = esp32/netmcu/external/host-test-idf
@@ -19,3 +19,9 @@
 [submodule "esp32/netmcu/external/util-components"]
 	path = esp32/netmcu/external/util-components
 	url = https://github.com/zwiebert/util-components.git
+[submodule "esp32/netmcu/external/mbed-uout"]
+	path = esp32/netmcu/external/mbed-uout
+	url = https://github.com/zwiebert/mbed-uout.git
+[submodule "esp32/netmcu/mbed-mainloop"]
+	path = esp32/netmcu/external/mbed-mainloop
+	url = https://github.com/zwiebert/mbed-mainloop.git
