--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -49,7 +49,7 @@ project(netmcu esptool_py
 set_target_properties(__idf_stm32 PROPERTIES LINK_INTERFACE_MULTIPLICITY 3)
 
 
-set(comps app_main app_settings  utils_misc utils_debug txtio uout cli jsmn 
+set(comps app_main app_settings  utils_misc utils_debug txtio uout cli jsoneat 
  net_http_server net_mqtt_app app_uout app_misc app_net net app_cli protobuf nanopb stm32 config_kvs 
  kvs net_mqtt_client stm32_com http_server_content firmware_update storage utils_time)
 
